# cyclops

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cyclops.def
scripts/: check_license_headers.sh
src/: experiments.cpp  graph.cpp  main.cpp
src/cr_lib/: all_paths.hpp  cgaltypes.hpp  contractionLP.hpp  contractor.cpp  contractor.hpp  cost_triangulation.hpp  dijkstra.cpp  dijkstra.hpp  dijkstra.inc  dijkstra_thread.hpp  edge.cpp  edge.inc  edge_load.hpp  enumerate_optimals.cpp  enumerate_optimals.hpp  enumerate_optimals.inc  full_cell_id.cpp  graph.cpp  graph.hpp  graph.inc  graph_loading.hpp  grid.cpp  grid.hpp  ilp_independent_set.cpp  ilp_independent_set.hpp  linearProgram.cpp  linearProgram.hpp  loginfo.cpp  loginfo.hpp  multi_file_format.hpp  multiqueue.cpp  multiqueue.hpp  naive_exploration.hpp  namedType.hpp  ndijkstra.cpp  ndijkstra.hpp  ndijkstra.inc  node.cpp  posvector.cpp  posvector.hpp  (+17 more)
test/: contractor_test.cpp  edge_load_test.cpp  edge_test.cpp  enumerate_optimals_test.cpp  graph_test.cpp  grid_test.cpp  independent_set_test.cpp  linearProgramming_test.cpp  ndijkstra_test.cpp  node_test.cpp  posvector_test.cpp  restricted_set_test.cpp  test.cpp  test2.cpp  url_paring_test.cpp
web/: index.html  ui.js
